altered margin value for grid to fix horizontal scrolling

--- a/raw/sass/static/grid.scss
+++ b/raw/sass/static/grid.scss
@@ -34,7 +34,7 @@
 	vertical-align: top;
 	display: inline-block;
 	box-sizing: border-box;
-	margin-right: -.244em;
+	margin-right: -.27em;
 	white-space: normal;
 	padding-left: $grid-gutter-width;
 }
